# elevator-system

./: .gitignore  README.md  Take_home_Elevator.md  bench.py  pyproject.toml  requirements.txt
data/: sample_requests.csv
elevator_sim/: __init__.py  __main__.py  cli.py  elevator.py  io_utils.py  models.py  simulation.py  stats.py  viz.py
elevator_sim/schedulers/: __init__.py  base.py  nearest_car.py  round_robin.py  zone_based.py
results/: results.json  scheduler_comparison.csv  scheduler_comparison.md
scripts/: generate_results.py  plot_comparison.py
slides/: _build_pdf.py
tests/: test_cli.py  test_elevator.py  test_express.py  test_schedulers.py  test_simulation.py  test_stats.py
