[project]
name = "elevator-sim"
version = "0.1.0"
description = "A discrete-time Destination Dispatch elevator system simulation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
# Charts for the --plot flag.
plot = ["matplotlib>=3.5"]

[project.scripts]
elevator-sim = "elevator_sim.__main__:main"

[dependency-groups]
# Test suite (dev-only).
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elevator_sim"]
