[project]
name = "elevator-sim"
version = "0.1.0"
description = "A discrete-time Destination Dispatch elevator system simulation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
# Charts for the --plot flag.
plot = ["matplotlib>=3.5"]

[project.scripts]
elevator-sim = "elevator_sim.__main__:main"

[dependency-groups]
# Test suite + linter (dev-only).
dev = ["pytest>=7.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["elevator_sim"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# pycodestyle errors, pyflakes, isort, pyupgrade, flake8-bugbear.
select = ["E", "F", "I", "UP", "B"]
# Long argparse help strings are clearer on one line.
ignore = ["E501"]
